demo-app-kube-configs/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: poc
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: kube-learning.com
      http:
        paths:
          - backend:
              service:
                name: crud-service
                port:
                  number: 8088
            pathType: Prefix
            path: /.* 
    - host: kafdrop.com
      http:
        paths:
          - backend:
              service:
                name: kafdrop-service
                port:
                  number: 9000
            pathType: Prefix
            path: /.*
